<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:layout_gravity="center_vertical"
                android:src="@drawable/nav_home"
                android:layout_marginRight="8dp"
                tools:ignore="RtlHardcoded" />

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/splash_text_wrap"
                android:layout_width="120dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/splash_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/app_name"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/app_slogan"
                    android:gravity="center_horizontal" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"
            android:text="@string/app_version"/>

    </RelativeLayout>



</android.support.design.widget.CoordinatorLayout>